# projet-tech-IUG

./: CMakeLists.txt  CMakeLists.txt.user.09ecf1f  CMakeLists.txt.user.09ecf1f.4.8-pre1  CMakeLists.txt.user.2e6492c
cmake/: FindAllegro.cmake  add_catch_tests.cmake
docs/: Doxyfile.in
include/: ei_application.h  ei_draw.h  ei_event.h  ei_eventmanager.h  ei_geometrymanager.h  ei_main.h  ei_types.h  ei_widget.h  hw_interface.h
lib/_win32/: eibase.lib
pages/: README.md  algo.md
src/: ei_application.cpp  ei_button.cpp  ei_draw.cpp  ei_entry.cpp  ei_eventmanager.cpp  ei_frame.cpp  ei_geometrymanager.cpp  ei_griddeur.cpp  ei_main.cpp  ei_placer.cpp  ei_radio_button.cpp  ei_toplevel.cpp  ei_widget.cpp
tests/: CMakeLists.txt  button.cpp  entry.cpp  frame.cpp  griddeur.cpp  minimal.cpp  radiobutton.cpp  toplevel.cpp  unit_tests.cpp
